Finish CR fixes for remote operator v2